Xcode generator not quoting framework names for linker
When the Xcode generator adds a linker flag for a framework dependency, it does not quote framework names that may have spaces in them. For example, for a dependency on "Adobe AIR.framework" it adds linker arguments "-framework Adobe AIR" instead of '-framework "Adobe AIR"' or similar, causing the link command to fail.
It looks like this issue was introduced in 3.19 with the major changes to the generator.
Perhaps the fix is as simple as wrapping the name with this->XCodeEscapePath()
at line 3699 in cmGlobalXCodeGenerator::AddDependAndLinkInformation
?
Edited by Brad King